<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout android:layout_width="fill_parent" android:id="@+id/relativeLayout1" android:layout_height="wrap_content">
        <Button android:layout_width="wrap_content" android:text="@string/button_back" android:id="@+id/buttonBack" android:gravity="right" android:layout_height="wrap_content" android:onClick="onButtonClick"></Button>
        <ImageView android:src="@drawable/icon" android:layout_height="wrap_content" android:id="@+id/imageView1" android:layout_alignParentRight="true" android:layout_width="wrap_content"></ImageView>
    </RelativeLayout>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/seekbarText" android:text="@string/seekbarText" android:visibility="gone"></TextView>
    <LinearLayout 
    	android:id="@+id/deviceChart" 
    	android:layout_height="300dip" 
    	android:orientation="horizontal" 
    	android:gravity="right" 
    	android:layout_width="fill_parent">
    </LinearLayout>
    <SeekBar android:layout_height="wrap_content"  android:visibility="visible" android:layout_width="fill_parent" android:progress="0" android:id="@+id/seekBar1"></SeekBar>
    <TextView android:layout_height="wrap_content" android:id="@+id/measuresDisplayText" android:layout_width="wrap_content"></TextView>
    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/buttonAddMeasure" android:onClick="onButtonClick" android:text="@string/button_add_measure"></Button>
    <TextView android:text="TextView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textViewInfo"></TextView>
		
</LinearLayout>
