<?xml version="1.0" encoding="utf-8"?>
<TableLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  
  	<TableRow>
	    <TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Session Length (miniutes):"></TextView>
	    <EditText android:text="" android:id="@+id/editTextSessionLength" android:layout_width="wrap_content" android:layout_height="wrap_content"></EditText>
  	</TableRow>
  	<TableRow>
	    <TextView android:text="Alpha Gain:" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
	    <EditText android:text="" android:id="@+id/editTextAlphaGain" android:layout_width="100dip" android:layout_height="wrap_content" ></EditText>
  	</TableRow>
  	<TableRow>
	    <TextView android:text="Show instructions on Start:" android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
	    <CheckBox android:id="@+id/checkBoxShowInstructions" android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
  	</TableRow>
  	<TableRow>
	    <TextView android:text="Allow multiple users:" android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
	    <CheckBox android:id="@+id/checkBoxMultipleUsers" android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
  	</TableRow>
  	<TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
  		<TextView android:text="Band of Interest:" android:id="@+id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
  		<Spinner android:id="@+id/spinnerBandOfInterest" android:layout_width="wrap_content" android:layout_height="wrap_content"></Spinner>
  	
  	
  	</TableRow>
  	<TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content" android:layout_height="wrap_content">
  		<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView5" android:text="@string/saveRawWave"></TextView>
  		<CheckBox android:layout_height="wrap_content" android:id="@+id/checkBoxSaveRawWave" android:layout_width="wrap_content" android:text="CheckBox"></CheckBox>
  	</TableRow>

  	<TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content" android:layout_height="wrap_content">
  		<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView5" android:text="@string/allowComments"></TextView>
  		<CheckBox android:layout_height="wrap_content" android:id="@+id/checkBoxAllowComments" android:layout_width="wrap_content" android:text="CheckBox"></CheckBox>
  	</TableRow>

  	<TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content">
  		<Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/buttonReScale" android:text="@string/reScale" android:onClick="onButtonClick"></Button>
  	</TableRow>
</TableLayout>
